# distributed_kmeans

./: CMakeLists.txt  TODO.txt  main.cpp
src/algorithms/: kmeans.cpp  kmeans.hpp
src/api/: centroid.hpp  cluster.hpp  point.hpp
src/util/: cmdopts.cpp  cmdopts.hpp
